test_suite/alan-2022-examples/failing/001820_mutation.alan
source o begin call to xW() end
